--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,22 @@
                 "--reload"
             ],
             "jinja": true
+        },
+        {
+            "name": "Python Debugger Public: FastAPI",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "uvicorn",
+            "args": [
+                "main:app",
+                "--reload",
+                "--host",
+                "0.0.0.0",
+                "--port",
+                "9090",
+                "--reload"
+            ],
+            "jinja": true
         }
     ]
 }
