--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.7
 fastapi-cli==0.0.7
+fastapi-login==1.10.3
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -21,6 +22,7 @@ mdurl==0.1.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -30,6 +32,7 @@ shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.45.3
 typer==0.15.1
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
 watchfiles==1.0.4
